test/files/neg/names-defaults-neg.check
names-defaults-neg.scala:65: error: not enough arguments for method apply: (a: Int,b: String)(c: Int*)Fact in object Fact.
Unspecified value parameter b.
  val fac = Fact(1)(2, 3)
                ^
names-defaults-neg.scala:5: error: type mismatch;
 found   : java.lang.String("#")
 required: Int
  test1(b = 2, a = "#")
                   ^
names-defaults-neg.scala:8: error: positional after named argument.
  test1(b = "(*", 23)
                  ^
names-defaults-neg.scala:13: error: reference to x is ambiguous; it is both, a parameter
name of the method and the name of a variable currently in scope.
  test2(x = 1)
          ^
names-defaults-neg.scala:15: error: not found: value c
  test1(c = 0, b = "joke")
        ^
names-defaults-neg.scala:16: error: not found: value m
  test7((m = 1))  // named arguments must be top-level assignments
         ^
names-defaults-neg.scala:17: error: not found: value m
  test7({m = 1})
         ^
names-defaults-neg.scala:18: error: not found: value m
  test7 { m = 1 } // no named arguments in argument block
          ^
names-defaults-neg.scala:19: error: reference to x is ambiguous; it is both, a parameter
name of the method and the name of a variable currently in scope.
  test8(x = 1)
          ^
names-defaults-neg.scala:22: error: parameter specified twice: a
  test1(1, a = 2)
             ^
names-defaults-neg.scala:23: error: parameter specified twice: b
  test1(b = 1, b = "2")
                 ^
names-defaults-neg.scala:26: error: Int does not take parameters
  test3(b = 3, a = 1)(3)
                     ^
names-defaults-neg.scala:35: error: ambiguous reference to overloaded definition,
both method f in object t1 of type (b: String,a: Int)java.lang.String
and  method f in object t1 of type (a: Int,b: String)java.lang.String
match argument types (b: java.lang.String,a: Int)
  t1.f(b = "dkljf", a = 1)
     ^
names-defaults-neg.scala:42: error: ambiguous reference to overloaded definition,
both method f in object t3 of type (a2: Int)(b: Int)java.lang.String
and  method f in object t3 of type (a1: Int)java.lang.String
match argument types (Int)
  t3.f(1)
     ^
names-defaults-neg.scala:43: error: ambiguous reference to overloaded definition,
both method f in object t3 of type (a2: Int)(b: Int)java.lang.String
and  method f in object t3 of type (a1: Int)java.lang.String
match argument types (Int)
  t3.f(1)(2)
     ^
names-defaults-neg.scala:49: error: ambiguous reference to overloaded definition,
both method g in object t7 of type (a: B)java.lang.String
and  method g in object t7 of type (a: C,b: Int*)java.lang.String
match argument types (C)
  t7.g(new C()) // ambigous reference
     ^
names-defaults-neg.scala:53: error: parameter specified twice: b
  test5(a = 1, b = "dkjl", b = "dkj")
                             ^
names-defaults-neg.scala:54: error: parameter specified twice: b
  test5(1, "2", b = 3)
                  ^
names-defaults-neg.scala:55: error: when using named arguments, the vararg parameter has to be specified exactly once
  test5(b = "dlkj")
       ^
names-defaults-neg.scala:61: error: ambiguous reference to overloaded definition,
both method f in object t8 of type (b: String,a: Int)java.lang.String
and  method f in object t8 of type (a: Int,b: java.lang.Object)java.lang.String
match argument types (a: Int,b: java.lang.String) and expected result type Any
  println(t8.f(a = 0, b = "1")) // ambigous reference
             ^
names-defaults-neg.scala:69: error: wrong number of arguments for <none>: (x: Int,y: String)A1
  A1() match { case A1(_) => () }
                      ^
names-defaults-neg.scala:76: error: no type parameters for method test4: (x: T[T[List[T[X forSome { type X }]]]])T[T[List[T[X forSome { type X }]]]] exist so that it can be applied to arguments (List[Int])
 --- because ---
argument expression's type is not compatible with formal parameter type;
 found   : List[Int]
 required: ?T[ ?T[ List[?T[ X forSome { type X } ]] ] ]
Error occurred in an application involving default arguments.
  test4()
  ^
names-defaults-neg.scala:79: error: type mismatch;
 found   : List[Int]
 required: List[List[?]]
  def test6[T](x: List[List[T]] = List(1,2)) = x
                                      ^
names-defaults-neg.scala:82: error: type mismatch;
 found   : Int
 required: String
Error occurred in an application involving default arguments.
  new A2[String]()
  ^
names-defaults-neg.scala:86: error: module extending its companion class cannot use default constructor arguments
    object C extends C()
             ^
names-defaults-neg.scala:90: error: deprecated parameter name x has to be distinct from any other parameter name (deprecated or not).
  def deprNam1(x: Int, @deprecatedName('x) y: String) = 0
                                           ^
names-defaults-neg.scala:91: error: deprecated parameter name a has to be distinct from any other parameter name (deprecated or not).
  def deprNam2(a: String)(@deprecatedName('a) b: Int) = 1
                                              ^
names-defaults-neg.scala:93: warning: the parameter name y has been deprecated. Use b instead.
  deprNam3(y = 10, b = 2)
             ^
names-defaults-neg.scala:93: error: parameter specified twice: b
  deprNam3(y = 10, b = 2)
                     ^
names-defaults-neg.scala:98: error: unknown parameter name: m
  f3818(y = 1, m = 1)
                 ^
names-defaults-neg.scala:131: error: reference to var2 is ambiguous; it is both, a parameter
name of the method and the name of a variable currently in scope.
  delay(var2 = 40)
             ^
names-defaults-neg.scala:134: error: missing parameter type for expanded function ((x$1) => a = x$1)
  val taf2: Int => Unit = testAnnFun(a = _, b = get("+"))
                                         ^
names-defaults-neg.scala:135: error: parameter specified twice: a
  val taf3 = testAnnFun(b = _: String, a = get(8))
                                         ^
names-defaults-neg.scala:136: error: wrong number of parameters; expected = 2
  val taf4: (Int, String) => Unit = testAnnFun(_, b = _)
                                              ^
names-defaults-neg.scala:144: error: variable definition needs type because 'x' is used as a named argument in its body.
  def t3 { var x = t.f(x = 1) }
               ^
names-defaults-neg.scala:147: error: variable definition needs type because 'x' is used as a named argument in its body.
  object t6 { var x = t.f(x = 1) }
                  ^
names-defaults-neg.scala:150: error: variable definition needs type because 'x' is used as a named argument in its body.
  class t9 { var x = t.f(x = 1) }
                 ^
names-defaults-neg.scala:164: error: variable definition needs type because 'x' is used as a named argument in its body.
  def u3 { var x = u.f(x = 1) }
               ^
names-defaults-neg.scala:167: error: variable definition needs type because 'x' is used as a named argument in its body.
  def u6 { var x = u.f(x = "32") }
               ^
names-defaults-neg.scala:170: error: reference to x is ambiguous; it is both, a parameter
name of the method and the name of a variable currently in scope.
  def u9 { var x: Int = u.f(x = 1) }
                              ^
names-defaults-neg.scala:177: error: variable definition needs type because 'x' is used as a named argument in its body.
  class u15 { var x = u.f(x = 1) }
                  ^
names-defaults-neg.scala:180: error: reference to x is ambiguous; it is both, a parameter
name of the method and the name of a variable currently in scope.
  class u18 { var x: Int = u.f(x = 1) }
                                 ^
one warning found
41 errors found
